fixed sidebar spacing

--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,7 @@ a {
 
 #sidebar {
     margin: 0px;
-    padding: 30px 0px 0px 0px;
+    padding: 40px 30px 0 30px;
 }
 
 #sidebar ul {
